# longlong

./: CMakeLists.txt  README.md  longlong.inc
src/: Core.h  longlong.def  main.cpp
src/SDK/: plugincommon.h
